--- a/landing.html
+++ b/landing.html
@@ -25,6 +25,7 @@
             Trial</button>
     </nav>
     <main class="bg-fuchsia-100 flex pr-10 pl-16 pb-20">
+        <!-- <img src="https://preview.colorlib.com/theme/gaas/img/banner/home-banner.png.webp" alt=""> -->
         <div class="h-80 py-50 pl-16 mb-20">
             <div class="">
                 <h1 class="text-5xl pt-36 py-6">Mass People <br> Oriented Software</h1>
